Filter brush rounding to 1 was happening even on sub-integer charts.  now its fixed and you can filter to any precision you want
Former-commit-id: 074fd6673ea1e1cea440fe018ccb881cc7425f53

--- a/TODO
+++ b/TODO
@@ -25,6 +25,10 @@ DONE - Naming of Barchat => dimension ("Iteration")
 DONE - xTics astethetics, don't show 1.2,1.4 in the 1,2,3 data
 DONE - LeftMost BIN does not show up.
 DONE - RightMost BIN is cut in half for some reason.
+DONE - Apply xUnits to sub-integer charts.
+    * Need to detect if a particular dimension contains sub-integer, if so, then you should use bins (should_i_bin_() should return true).
+    * this should fix the not being able to save bucketed charts.
+DONE - bug fixed: filter brush selection is limited to integers instead of allowing anywhere.
 
 
 https://lc.llnl.gov/spot/dcvis/?sf=/usr/gapps/spot/datasets/lulesh_new
@@ -33,9 +37,7 @@ https://rzlc.llnl.gov/spot/dcvis/?sf=/g/g0/pascal/testresults&xaxis=ccompiler&gr
 
 
 Next:
-- Apply xUnits to sub-integer charts.
-    * Need to detect if a particular dimension contains sub-integer, if so, then you should use bins (should_i_bin_() should return true).
-    * this should fix the not being able to save bucketed charts.
+- Reset all bug: https://rzlc.llnl.gov/spot/dcvis/?sf=/g/g0/pascal/testresults&xaxis=Code%20Builder&groupby=cputime&advection_order=0,1
 - File Upload browser on landing Page.
 - Nulls
 - STrings plus more than 12 unique values then we need to have a left horizontal bar.
