--- a/TODO
+++ b/TODO
@@ -14,6 +14,7 @@ DONE - spot2 redirect or deploy there and level it up 1 step from web/
     * https://lc.llnl.gov/spot2/
     * https://rzlc.llnl.gov/spot2/?sf=/usr/gapps/spot/datasets/lulesh_new
 
+
 RECENTLY DONE:
 DONE - alphabetize the drop down.
 DONE - Table HTML -> for the pieCharts and barCharts - maintain left/right position.
@@ -23,10 +24,9 @@ DONE - if sf file is not there then spit out an error.
 DONE - for now an input box.  "Please provide a directory that contains dot cali files."
 DONE - Naming of Barchat => dimension ("Iteration")
 DONE - xTics astethetics, don't show 1.2,1.4 in the 1,2,3 data
-DONE - LeftMost BIN does not show up.
-DONE - RightMost BIN is cut in half for some reason.
-DONE - Apply xUnits to sub-integer charts.
-    * Need to detect if a particular dimension contains sub-integer, if so, then you should use bins (should_i_bin_() should return true).
+DONE - Fixed LeftMost BIN does not show up.
+DONE - Fixed RightMost BIN is cut in half for some reason.
+DONE - Apply xUnits to sub-integer charts.  This means you can now select ranges on sub-integers.
     * this should fix the not being able to save bucketed charts.
 DONE - bug fixed: filter brush selection is limited to integers instead of allowing anywhere.
 
@@ -37,11 +37,10 @@ https://rzlc.llnl.gov/spot/dcvis/?sf=/g/g0/pascal/testresults&xaxis=ccompiler&gr
 
 
 Next:
-- Reset all bug: https://rzlc.llnl.gov/spot/dcvis/?sf=/g/g0/pascal/testresults&xaxis=Code%20Builder&groupby=cputime&advection_order=0,1
+- On the Spot1 page, be able to change the xAxis and GroupBy URLs based on the select drop down change.
 - File Upload browser on landing Page.
 - Nulls
 - STrings plus more than 12 unique values then we need to have a left horizontal bar.
-- On the Spot1 page, be able to change the xAxis and GroupBy URLs based on the select drop down change.
 
 
 
