--- a/TODO
+++ b/TODO
@@ -41,6 +41,7 @@ https://rzlc.llnl.gov/spot2/?sf=/g/g0/pascal/test_results/1/test_results
 - attempt to throw as many as possible.
 
 Next:
+- fix case where you only have 1 cali file.
 - Need to have multiple requests to send all the cali files.
 - prevent alert, and show in screen, if no user actions yet, don't say "got 0 data points."
     * key: if no user actions yet.
