--- a/TODO
+++ b/TODO
@@ -30,6 +30,7 @@ DONE - Apply xUnits to sub-integer charts.  This means you can now select ranges
     * this should fix the not being able to save bucketed charts.
 DONE - bug fixed: filter brush selection is limited to integers instead of allowing anywhere.
 DONE - If you mis-type a path from the rzlc.llnl.gov/spot2 dialog, it takes you to rzlc.llnl.gov.  It should instead just print an error.
+DONE - Need to have multiple requests to send all the cali files.
 
 
 https://lc.llnl.gov/spot/dcvis/?sf=/usr/gapps/spot/datasets/lulesh_new
@@ -37,12 +38,19 @@ https://rzlc.llnl.gov/spot/dcvis/?sf=/g/g0/pascal/testresults0&xaxis=ccompiler&g
 https://rzlc.llnl.gov/spot2/?sf=/g/g0/pascal/test_results/1/test_results
 
 
+Works:
+https://rzlc.llnl.gov/spot/dcvis/?machine=rzgenie&calis=local&sf=/g/g0/pascal/test_results1500&xaxis=&exe_compare=1&yaxis=max%23inclusive%23sum%23time.duration&aggregate=sum&groupby=executable
+
+
 /usr/gapps/spot/spottempw key chunk# data
 - attempt to throw as many as possible.
 
 Next:
+- Optimize the check/uncheck box -> right now it re-initializes.
+    * can we just load 100 of the table? but still be able to extract all that were selected.
+- Regression test and deploy s2.
+
 - fix case where you only have 1 cali file.
-- Need to have multiple requests to send all the cali files.
 - prevent alert, and show in screen, if no user actions yet, don't say "got 0 data points."
     * key: if no user actions yet.
 - physicsstr and "test" - STrings plus more than 8 unique values then we need to have a left horizontal bar in place of the pieChart.  make it scroll.
@@ -51,8 +59,9 @@ Next:
 - Nulls
 - it'd be nice if the tics would line up with the bar charts.
 - think about 10,11,12 xrange if you only have 11s, think about 1 value graphs and how to make it obvious to user of what it is.
+- spin notification
 
-
+- Curves & Sets - figure out how to show this in crossfilter (sets is one of the things)
 
 
 
