--- a/TODO
+++ b/TODO
@@ -31,6 +31,10 @@ DONE - Apply xUnits to sub-integer charts.  This means you can now select ranges
 DONE - bug fixed: filter brush selection is limited to integers instead of allowing anywhere.
 DONE - If you mis-type a path from the rzlc.llnl.gov/spot2 dialog, it takes you to rzlc.llnl.gov.  It should instead just print an error.
 DONE - Need to have multiple requests to send all the cali files.
+DONE - Optimize the check/uncheck box -> right now it re-initializes.
+    * can we just load 100 of the table? but still be able to extract all that were selected.
+DONE - prevent alert, and show in screen, if no user actions yet, don't say "got 0 data points."
+    * key: if no user actions yet.
 
 
 https://lc.llnl.gov/spot/dcvis/?sf=/usr/gapps/spot/datasets/lulesh_new
@@ -46,13 +50,7 @@ https://rzlc.llnl.gov/spot/dcvis/?machine=rzgenie&calis=local&sf=/g/g0/pascal/te
 - attempt to throw as many as possible.
 
 Next:
-- Optimize the check/uncheck box -> right now it re-initializes.
-    * can we just load 100 of the table? but still be able to extract all that were selected.
-- Regression test and deploy s2.
-
 - fix case where you only have 1 cali file.
-- prevent alert, and show in screen, if no user actions yet, don't say "got 0 data points."
-    * key: if no user actions yet.
 - physicsstr and "test" - STrings plus more than 8 unique values then we need to have a left horizontal bar in place of the pieChart.  make it scroll.
 - On the Spot1 page, be able to change the xAxis and GroupBy URLs based on the select drop down change.
 - File Upload browser on landing Page.
