--- a/TODO
+++ b/TODO
@@ -52,12 +52,13 @@ https://rzlc.llnl.gov/spot2/?machine=rzgenie&calis=local&sf=/g/g0/pascal/test_re
 
 Next:
 DONE - turn off the 100 limit
-- Update -> URL parameters.- On the compare page, be able to change the dropdowns URLs based on the select drop down change.
-- Regression test the last N Days
-- TEST and roll out S2.
-- work on Joe Chavez being able to roll out: S2.
+DONE - Update -> URL parameters.- On the compare page, be able to change the dropdowns URLs based on the select drop down change.
+DONE - Regression test the last N Days
+DONE - TEST and roll out S2.
 
+- work on Joe Chavez being able to roll out: S2.
 - physicsstr and "test" - STrings plus more than 8 unique values then we need to have a left horizontal bar in place of the pieChart.  make it scroll.
+
 - Nulls
     * assuming we create a newbar with a lower bar, we'll have a problem:
     * if someone gets new data, "what is considered a null" will change.
