add two more options for jupyter icon, not sure which to pick
Former-commit-id: 66c97d856ac71e3f04fbb32c8cb8b7acfc3512f5

--- a/TODO
+++ b/TODO
@@ -86,6 +86,8 @@ DONE - add URL loading and saving
 
 
 
+__rec=node,id=108,attr=107,data=79.885979,parent=93
+__rec=node,id=127,attr=126,data=5491.526855,parent=108
 
 
 
