allow for custom distributions, so you can specify exactly how much of what you want and allow for a hashed distrubtion scheme based on the dimension name
Former-commit-id: db8da5d004799e264f720ad8ebe109692104278c

--- a/TODO
+++ b/TODO
@@ -1,11 +1,12 @@
 List:
+DONE - be able to remove existing files.
 -1. Be able to set the output directory.
 DONE - 0. Licensing for icons, check.
 2. Rebind "show more" after any selective event occurs -> like you select a pie chart or a bar chart or something.
 3. Reset link needs to not appear after reset_all was clicked.
 DONE - 4. Fix wrap fo the horizBarChart
 DONE - 5. Be able to owverwrite exiting cali files.
-6. Fix compare page for cali files -> make sure tmepalte is not included.
+DONE - 6. (one working case is there) Fix compare page for cali files -> make sure tmepalte is not included.
 DONE - 7. More template paramters.
 8. Add a curve, so it's not homogenous.
 9. Fix [brackets] for command line, it's not showing up.
