--- a/TODO
+++ b/TODO
@@ -7,6 +7,7 @@ DONE - 10. Show more optimization -> make it so it doesnt makea  summary call, j
     * chmod -R g+rwX,o+rX the-base-dir
     * chgrp -R spotdev
 - get SCF accounts -> Jeff -> deploy spot there.
+    * finished training: https://caas.llnl.gov/mycaas
     * md5 sum to see if it pushed correctly.
     * through FIS (file interchange service) into SCF
     * Get SCF account then do this: https://lc.llnl.gov/confluence/display/RAM/FIS
